--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,7 +1,4 @@
-$light-bc: #FFFFFF;
-$dark-bc: #223046;
-
-$border-color: #BFC4CD;
+@import '../../variables.scss';
 
 .button {
   padding: 3px 0;
@@ -10,7 +7,7 @@ $border-color: #BFC4CD;
   
   font-family: 'Roboto', sans-serif;
   font-size: 1vw;
-  color: $dark-bc;
+  color: $dark-base-color;
   
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
@@ -19,18 +16,18 @@ $border-color: #BFC4CD;
   
   cursor: pointer;
 
-  -webkit-transition: all 0.4s ease-out;
-  -moz-transition: all 0.4s ease-out;
-  transition: all 0.4s ease-out;
+  -webkit-transition: $button-transition;
+  -moz-transition: $button-transition;
+  transition: $button-transition;
 }
 
 @media(hover: hover) {
   .button:hover {
-    background: $dark-bc;
-    color: $light-bc;
+    background: $dark-base-color;
+    color: $light-base-color;
 
-    -webkit-transition: all 0.4s ease-out;
-    -moz-transition: all 0.4s ease-out;
-    transition: all 0.4s ease-out;
+    -webkit-transition: $button-transition;
+    -moz-transition: $button-transition;
+    transition: $button-transition;
   }
 }
