--- a/src/components/countResult/countResult.scss
+++ b/src/components/countResult/countResult.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 .calcResult {
   margin-top: 2vw;
   
@@ -12,7 +14,7 @@
       justify-content: flex-start;
 
       padding-left: 25%;
-      border-bottom: 1px solid #BFC4CD;
+      border-bottom: 1px solid $border-color;
 
       img {
         width: 20px;
