--- a/src/components/dark/dark.scss
+++ b/src/components/dark/dark.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 .dark {
   position: fixed;
   top: 0;
@@ -6,7 +8,7 @@
   left: 0;
   display: none;
 
-  background: #1E1E1E;
+  background: $modal-back-background-color;
 
   opacity: 0.6;
   z-index: 7;
