--- a/src/components/exchange/exchange.scss
+++ b/src/components/exchange/exchange.scss
@@ -1,22 +1,17 @@
+@import '../../variables.scss';
 
 .exchange {
   min-height: 16vw;
-  padding: 1vw 0 1vw 0;
-  border: 1px solid #BFC4CD;
+  padding: 1vw 0;
+  border: 1px solid $border-color;
 }
 
-.exchangeContainer {
+.exchange_container {
   width: 90%;
   margin: 0 auto;
 }
 
-.exchangeHead {
-  padding: 1vw;
-
-  font-weight: bold;
-}
-
-.exchangeContent {
+.exchange_content {
   ul {
     margin: 0;
     padding: 0;
@@ -27,9 +22,9 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
 
-      margin: .5vw auto .5vw auto;
+      margin: 0.5vw auto;
       padding-left: 25%;
-      border-bottom: 1px solid #BFC4CD;
+      border-bottom: 1px solid $border-color;
 
       img {
         width: 20px;
