--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,15 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Roboto:ital@0;1&display=swap');
+@import '../../variables.scss';
 
 .header {
   min-height: 5vw;
 
   hr {
-    border: 1px solid #223046;
+    border: 1px solid $dark-base-color;
   }
- 
 }
 
-.headerWrap {
+.header_wrap {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
 }
@@ -21,18 +21,15 @@
   
   a {
     text-decoration: none;
-      
   }
 
   h2 {
     font-family: 'Lato', sans-serif;
     font-size: 1.6vw;
-    color: #223046;
+    color: $dark-base-color;
 
     cursor: pointer;
-
   }
-
 }
 
 .person {
@@ -42,8 +39,16 @@
 
   i {
     font-size: 1.6vw;
-    color: #223046;
+    color: $dark-base-color;
 
     cursor: pointer;
+
+    transition: transform 0.3s ease-in-out;
+  }
+
+  @media(hover: hover) {
+    i:hover {
+      transform: scale(1.15, 1.15);
+    }
   }
 }
