--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 .modal_input {
   display: grid;
   grid-template-columns: 1fr;
@@ -9,7 +11,7 @@
     font-family: 'Lato', sans-serif;
     font-size: 0.7vw;
     line-height: 1.5vw;
-    color: #eb2b21;
+    color: $error-color;
   }
 
   input {
