--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 .modal {
   position: absolute;
   top: 0;
@@ -10,10 +12,10 @@
   width: 18.5vw;
   height: 25vw;
   margin: auto;
-  border: 1px solid #ccc;
+  border: 1px solid $border-color;
   border-radius: 9px;
 
-  background: #B9D6F3;
+  background: $modal-bc-color;
 
   opacity: 1;
   z-index: 8;
@@ -45,7 +47,7 @@
       a {
         font-family: 'Roboto', sans-serif;
         font-size: 1vw;
-        color: #223046;
+        color: $modal-close-color;
 
         text-decoration: none;
       }
@@ -54,12 +56,12 @@
   i {
     font-size: 1vw;
 
-    transition: 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
     
     cursor: pointer;
   }
   i:hover {
-    color: #ffffff;
+    color: $modal-close-color-hover;
   }
 }
 
