--- a/src/pages/sample/sample.scss
+++ b/src/pages/sample/sample.scss
@@ -1,6 +1,8 @@
+@import '../../variables.scss';
+
 .sample {
   min-height: 16vw;
-  border: 1px solid #BFC4CD;
+  border: 1px solid $border-color;
 }
 
 .sample_container {
@@ -18,6 +20,7 @@
 
 .sample_result {
   margin: 2vw 0;
+
   ul {
     margin: 0;
     padding: 0;
@@ -30,7 +33,7 @@
 
       margin-bottom: 1vw;
       padding: 0.5vw 0.5vw 0.5vw 25%;
-      border: 1px solid #BFC4CD;
+      border: 1px solid $border-color;
 
       img {
         width: 20px;
